# audiobook-split-ffmpeg-rs

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
src/ffmpeg_split/: ffprobe.rs  mod.rs  model.rs
